--- a/po/id.po
+++ b/po/id.po
@@ -2,11 +2,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-03 17:51+0200\n"
+"POT-Creation-Date: 2020-09-23 10:33+0200\n"
 "PO-Revision-Date: 2020-09-20 05:48+0000\n"
 "Last-Translator: Kukuh Syafaat <syafaatkukuh@gmail.com>\n"
-"Language-Team: Indonesian <https://l10n.opensuse.org/projects/snapper/master/"
-"id/>\n"
+"Language-Team: Indonesian <https://l10n.opensuse.org/projects/snapper/master/id/>\n"
 "Language: id\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -44,6 +43,9 @@ msgstr "\t--diff-cmd <perintah>\t\tPerintah yang digunakan untuk membandingkan b
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr "\t--extensions, -x <opsi>\tOpsi tambahan diteruskan ke perintah diff."
 
+msgid "\t--free-space <space>\t\tTry to make space available."
+msgstr ""
+
 msgid "\t--from\t\t\t\tCreate a snapshot from the specified snapshot."
 msgstr "\t--from\t\t\t\tBuat snapshot dari snapshot yang ditentukan."
 
@@ -70,6 +72,9 @@ msgstr "\t--no-dbus\t\t\tOperasikan tanpa DBus."
 
 msgid "\t--output, -o <file>\t\tSave status to file."
 msgstr "\t--output, -o <berkas>\t\tSimpan status ke berkas."
+
+msgid "\t--path <path>\t\t\tCleanup all configs affecting path."
+msgstr ""
 
 msgid "\t--pre-number <number>\t\tNumber of corresponding pre snapshot."
 msgstr "\t--pre-number <nomor>\t\tJumlah snapshot pra yang sesuai."
@@ -169,6 +174,10 @@ msgstr "\tsnapper xadiff <nomor1>..<nomor2> [berkas]"
 
 msgid "    Global options:"
 msgstr "    Opsi global:"
+
+#, fuzzy
+msgid "    Options for 'cleanup' command:"
+msgstr "    Opsi untuk perintah 'create':"
 
 msgid "    Options for 'create' command:"
 msgstr "    Opsi untuk perintah 'create':"
@@ -367,6 +376,13 @@ msgid "Configdata '%s' has empty key."
 msgstr "Data konfigurasi '%s' memiliki kunci kosong."
 
 #, c-format
+msgid "Could not make enough free space available for path '%s'."
+msgstr ""
+
+msgid "Could not make enough free space available."
+msgstr ""
+
+#, c-format
 msgid "Creating config failed (%s)."
 msgstr "Gagal membuat konfigurasi (%s)."
 
@@ -401,6 +417,15 @@ msgstr[0] "Menghapus snapshot dari %s:"
 msgid "Detecting filesystem type failed."
 msgstr "Gagal mendeteksi jenis sistem berkas."
 
+#. TRANSLATORS: symbol for "exa" (best keep untranslated)
+msgid "E"
+msgstr ""
+
+#. TRANSLATORS: symbol for "exa bytes" (best keep untranslated)
+#, fuzzy
+msgid "EB"
+msgstr "EiB"
+
 #. TRANSLATORS: symbol for "exbi bytes" (best keep untranslated)
 msgid "EiB"
 msgstr "EiB"
@@ -417,6 +442,18 @@ msgstr "Galat (%s)."
 
 msgid "Failed to initialize filesystem handler."
 msgstr "Gagal menginisialisasi penangan sistem berkas."
+
+#, fuzzy, c-format
+msgid "Failed to parse '%s'."
+msgstr "gagal membuat %s"
+
+#, c-format
+msgid "Failed to query free space for path '%s'."
+msgstr ""
+
+#, fuzzy
+msgid "Failed to query free space."
+msgstr "gagal membuat %s"
 
 msgid "Failed to set locale. Fix your system."
 msgstr "Gagal menyetel locale. Perbaiki sistem Anda."
@@ -435,6 +472,15 @@ msgstr "Berkas '%s' tidak ditemukan."
 #, c-format
 msgid "Free space error (%s)."
 msgstr "Galat ruang bebas (%s)."
+
+#. TRANSLATORS: symbol for "giga" (best keep untranslated)
+msgid "G"
+msgstr ""
+
+#. TRANSLATORS: symbol for "giga bytes" (best keep untranslated)
+#, fuzzy
+msgid "GB"
+msgstr "GiB"
 
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
@@ -461,12 +507,20 @@ msgstr "Ambit '%s' tidak valid."
 msgid "Invalid configdata."
 msgstr "Data konfigurasi tidak valid."
 
+#, fuzzy
+msgid "Invalid free-space value."
+msgstr "Subvolume tidak valid."
+
 msgid "Invalid group."
 msgstr "Grup tidak valid."
 
 #, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "Format '%s' yang dapat dibaca mesin tidak valid."
+
+#, fuzzy, c-format
+msgid "Invalid path '%s'."
+msgstr "Ambit '%s' tidak valid."
 
 #, c-format
 msgid "Invalid snapshot '%s'."
@@ -495,6 +549,15 @@ msgstr "KiB"
 #, c-format
 msgid "Listing configs failed (%s)."
 msgstr "Konfigurasi listing gagal (%s)."
+
+#. TRANSLATORS: symbol for "mega" (best keep untranslated)
+msgid "M"
+msgstr ""
+
+#. TRANSLATORS: symbol for "mega bytes" (best keep untranslated)
+#, fuzzy
+msgid "MB"
+msgstr "MiB"
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
 msgstr "Mungkin Anda lupa pembatas '..' di antara nomor snapshot."
@@ -536,6 +599,15 @@ msgstr "Opsi --from hanya didukung untuk snapshot dari tipe tunggal."
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr "Opsi --read-write hanya didukung untuk snapshot dari tipe tunggal."
 
+#. TRANSLATORS: symbol for "peta" (best keep untranslated)
+msgid "P"
+msgstr ""
+
+#. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
+#, fuzzy
+msgid "PB"
+msgstr "PiB"
+
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
 msgstr "PiB"
@@ -557,6 +629,15 @@ msgstr "Snapshot '%u' tidak ditemukan."
 
 msgid "Snapshot is in use."
 msgstr "Snapshot sedang digunakan."
+
+#. TRANSLATORS: symbol for "tera" (best keep untranslated)
+msgid "T"
+msgstr ""
+
+#. TRANSLATORS: symbol for "tera bytes" (best keep untranslated)
+#, fuzzy
+msgid "TB"
+msgstr "TiB"
 
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr "Ambit dapat ditentukan secara manual menggunakan opsi--ambit."
@@ -638,6 +719,15 @@ msgstr "gagal menghapus %s"
 #, c-format
 msgid "failed to modify %s"
 msgstr "gagal memodifikasi %s"
+
+#. TRANSLATORS: symbol for "kilo" (best keep untranslated)
+msgid "k"
+msgstr ""
+
+#. TRANSLATORS: symbol for "kilo bytes" (best keep untranslated)
+#, fuzzy
+msgid "kB"
+msgstr "B"
 
 #, c-format
 msgid "modifying %s"
