--- a/po/ko.po
+++ b/po/ko.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: entries\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-03 17:51+0200\n"
+"POT-Creation-Date: 2020-09-23 10:33+0200\n"
 "PO-Revision-Date: 2019-03-01 20:28+0000\n"
 "Last-Translator: Hwajin Kim <hwajin.kim@e4net.net>\n"
 "Language-Team: Korean <https://l10n.opensuse.org/projects/snapper/master/ko/>\n"
@@ -49,6 +49,9 @@ msgstr "\t--diff-cmd <command>\t\t파일을 비교하는 데 쓰는 명령입니
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr "\t--extensions, -x <options>\tdiff 명령에 전달되는 추가 옵션입니다."
 
+msgid "\t--free-space <space>\t\tTry to make space available."
+msgstr ""
+
 msgid "\t--from\t\t\t\tCreate a snapshot from the specified snapshot."
 msgstr ""
 
@@ -80,6 +83,9 @@ msgstr "\t--no-dbus\t\t\tDBus 없이 작동합니다."
 # SLE12
 msgid "\t--output, -o <file>\t\tSave status to file."
 msgstr "\t--output, -o <file>\t\t상태를 파일에 저장합니다."
+
+msgid "\t--path <path>\t\t\tCleanup all configs affecting path."
+msgstr ""
 
 # SLE12
 msgid "\t--pre-number <number>\t\tNumber of corresponding pre snapshot."
@@ -207,6 +213,11 @@ msgstr "\tsnapper xadiff <number1>..<number2> [files]"
 # SLE12
 msgid "    Global options:"
 msgstr "    전역 옵션:"
+
+# SLE12
+#, fuzzy
+msgid "    Options for 'cleanup' command:"
+msgstr "    'create' 명령에 대한 옵션:"
 
 # SLE12
 msgid "    Options for 'create' command:"
@@ -451,6 +462,13 @@ msgstr "Configdata '%s'에 '=' 기호가 포함되어 있지 않습니다."
 msgid "Configdata '%s' has empty key."
 msgstr "Configdata '%s'에 빈 키가 있습니다."
 
+#, c-format
+msgid "Could not make enough free space available for path '%s'."
+msgstr ""
+
+msgid "Could not make enough free space available."
+msgstr ""
+
 # SLE12
 #, c-format
 msgid "Creating config failed (%s)."
@@ -495,6 +513,15 @@ msgstr[0] "%s에서 스냅샷 삭제 중:"
 msgid "Detecting filesystem type failed."
 msgstr "파일 시스템 유형을 감지하지 못했습니다."
 
+#. TRANSLATORS: symbol for "exa" (best keep untranslated)
+msgid "E"
+msgstr ""
+
+#. TRANSLATORS: symbol for "exa bytes" (best keep untranslated)
+#, fuzzy
+msgid "EB"
+msgstr "EiB"
+
 #. TRANSLATORS: symbol for "exbi bytes" (best keep untranslated)
 msgid "EiB"
 msgstr "EiB"
@@ -514,6 +541,20 @@ msgstr "오류입니다(%s)."
 # SLE12
 msgid "Failed to initialize filesystem handler."
 msgstr "파일 시스템 처리기를 초기화하지 못했습니다."
+
+# SLE12
+#, fuzzy, c-format
+msgid "Failed to parse '%s'."
+msgstr "%s 생성에 실패"
+
+#, c-format
+msgid "Failed to query free space for path '%s'."
+msgstr ""
+
+# SLE12
+#, fuzzy
+msgid "Failed to query free space."
+msgstr "%s 생성에 실패"
 
 msgid "Failed to set locale. Fix your system."
 msgstr "로케일을 설정하지 못했습니다. 시스템을 수정하십시오."
@@ -535,6 +576,15 @@ msgstr "'%s' 파일을 찾을 수 없습니다."
 #, c-format
 msgid "Free space error (%s)."
 msgstr "사용 가능한 공간 오류(%s)입니다."
+
+#. TRANSLATORS: symbol for "giga" (best keep untranslated)
+msgid "G"
+msgstr ""
+
+#. TRANSLATORS: symbol for "giga bytes" (best keep untranslated)
+#, fuzzy
+msgid "GB"
+msgstr "GiB"
 
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
@@ -566,12 +616,22 @@ msgid "Invalid configdata."
 msgstr "잘못된 configdata입니다."
 
 # SLE12
+#, fuzzy
+msgid "Invalid free-space value."
+msgstr "하위 볼륨이 잘못되었습니다."
+
+# SLE12
 msgid "Invalid group."
 msgstr "잘못된 그룹입니다."
 
 #, fuzzy, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "잘못된 테이블 모양 %d 입니다."
+
+# SLE12
+#, fuzzy, c-format
+msgid "Invalid path '%s'."
+msgstr "'%s' 스냅샷이 잘못되었습니다."
 
 # SLE12
 #, c-format
@@ -606,6 +666,15 @@ msgstr "KiB"
 #, c-format
 msgid "Listing configs failed (%s)."
 msgstr "구성 나열에 실패했습니다(%s)."
+
+#. TRANSLATORS: symbol for "mega" (best keep untranslated)
+msgid "M"
+msgstr ""
+
+#. TRANSLATORS: symbol for "mega bytes" (best keep untranslated)
+#, fuzzy
+msgid "MB"
+msgstr "MiB"
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
 msgstr "스냅샷 번호 사이에 '..' 구분 기호가 누락된 것 같습니다."
@@ -655,6 +724,15 @@ msgstr ""
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr ""
 
+#. TRANSLATORS: symbol for "peta" (best keep untranslated)
+msgid "P"
+msgstr ""
+
+#. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
+#, fuzzy
+msgid "PB"
+msgstr "PiB"
+
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
 msgstr "PiB"
@@ -679,6 +757,15 @@ msgstr "'%u' 스냅샷을 찾을 수 없습니다."
 # SLE12
 msgid "Snapshot is in use."
 msgstr "스냅샷이 사용 중입니다."
+
+#. TRANSLATORS: symbol for "tera" (best keep untranslated)
+msgid "T"
+msgstr ""
+
+#. TRANSLATORS: symbol for "tera bytes" (best keep untranslated)
+#, fuzzy
+msgid "TB"
+msgstr "TiB"
 
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr ""
@@ -776,6 +863,15 @@ msgstr "%s 삭제에 실패"
 #, c-format
 msgid "failed to modify %s"
 msgstr "%s 수정에 실패"
+
+#. TRANSLATORS: symbol for "kilo" (best keep untranslated)
+msgid "k"
+msgstr ""
+
+#. TRANSLATORS: symbol for "kilo bytes" (best keep untranslated)
+#, fuzzy
+msgid "kB"
+msgstr "B"
 
 # SLE12
 #, c-format
