--- a/po/sk.po
+++ b/po/sk.po
@@ -6,11 +6,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-03 17:51+0200\n"
+"POT-Creation-Date: 2020-09-23 10:33+0200\n"
 "PO-Revision-Date: 2020-09-16 18:48+0000\n"
 "Last-Translator: Ferdinand Galko <galko.ferdinand@gmail.com>\n"
-"Language-Team: Slovak <https://l10n.opensuse.org/projects/snapper/master/sk/>"
-"\n"
+"Language-Team: Slovak <https://l10n.opensuse.org/projects/snapper/master/sk/>\n"
 "Language: sk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -48,6 +47,9 @@ msgstr "\t--diff-cmd <command>\tPríkaz slúži na porovnávanie súborov."
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr "\t--extensions, -x <voľby>\tĎalšie voľby odovzdané príkazu diff."
 
+msgid "\t--free-space <space>\t\tTry to make space available."
+msgstr ""
+
 msgid "\t--from\t\t\t\tCreate a snapshot from the specified snapshot."
 msgstr "\t--from\t\t\t\tVytvorí snímku zo zadanej snímky."
 
@@ -74,6 +76,9 @@ msgstr "\t--no-dbus\t\t\tBeží bez DBus."
 
 msgid "\t--output, -o <file>\t\tSave status to file."
 msgstr "\t--output, -o <súbor>\t\tUloží stav do súboru."
+
+msgid "\t--path <path>\t\t\tCleanup all configs affecting path."
+msgstr ""
 
 msgid "\t--pre-number <number>\t\tNumber of corresponding pre snapshot."
 msgstr "\t--pre-number <číslo>\t\tČíslo zodpovedajúce snímke pred."
@@ -173,6 +178,10 @@ msgstr "\tsnapper xadiff <číslo1>..<číslo2> [súbory]"
 
 msgid "    Global options:"
 msgstr "    Globálne voľby:"
+
+#, fuzzy
+msgid "    Options for 'cleanup' command:"
+msgstr "    Voľby pre príkaz 'create':"
 
 msgid "    Options for 'create' command:"
 msgstr "    Voľby pre príkaz 'create':"
@@ -371,6 +380,13 @@ msgid "Configdata '%s' has empty key."
 msgstr "Konfiguračné údaje '%s' majú prázdny kľúč."
 
 #, c-format
+msgid "Could not make enough free space available for path '%s'."
+msgstr ""
+
+msgid "Could not make enough free space available."
+msgstr ""
+
+#, c-format
 msgid "Creating config failed (%s)."
 msgstr "Vytvorenie konfigurácie zlyhalo (%s)."
 
@@ -407,6 +423,15 @@ msgstr[2] "Vymazanie snímok z %s:"
 msgid "Detecting filesystem type failed."
 msgstr "Detekcia typu súborového systému zlyhala."
 
+#. TRANSLATORS: symbol for "exa" (best keep untranslated)
+msgid "E"
+msgstr ""
+
+#. TRANSLATORS: symbol for "exa bytes" (best keep untranslated)
+#, fuzzy
+msgid "EB"
+msgstr "EiB"
+
 #. TRANSLATORS: symbol for "exbi bytes" (best keep untranslated)
 msgid "EiB"
 msgstr "EiB"
@@ -424,6 +449,18 @@ msgstr "Chyba (%s)."
 
 msgid "Failed to initialize filesystem handler."
 msgstr "Zlyhala inicializácia obslužného programu systému súborov."
+
+#, fuzzy, c-format
+msgid "Failed to parse '%s'."
+msgstr "zlyhalo vytvorenie %s"
+
+#, c-format
+msgid "Failed to query free space for path '%s'."
+msgstr ""
+
+#, fuzzy
+msgid "Failed to query free space."
+msgstr "zlyhalo vytvorenie %s"
 
 msgid "Failed to set locale. Fix your system."
 msgstr "Zlyhalo nastavenie lokalizácie. Opravte si systém."
@@ -443,6 +480,15 @@ msgstr "Súbor '%s' nebol nájdený."
 #, c-format
 msgid "Free space error (%s)."
 msgstr "Chyba voľného miesta (%s)."
+
+#. TRANSLATORS: symbol for "giga" (best keep untranslated)
+msgid "G"
+msgstr ""
+
+#. TRANSLATORS: symbol for "giga bytes" (best keep untranslated)
+#, fuzzy
+msgid "GB"
+msgstr "GiB"
 
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
@@ -471,12 +517,20 @@ msgstr "Neplatná oblasť '%s'."
 msgid "Invalid configdata."
 msgstr "Neplatné konfiguračné údaje."
 
+#, fuzzy
+msgid "Invalid free-space value."
+msgstr "Neplatný podzväzok."
+
 msgid "Invalid group."
 msgstr "Neplatná skupina."
 
 #, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "Neplatný formát čitateľný strojom '%s'."
+
+#, fuzzy, c-format
+msgid "Invalid path '%s'."
+msgstr "Neplatná oblasť '%s'."
 
 #, c-format
 msgid "Invalid snapshot '%s'."
@@ -506,6 +560,15 @@ msgstr "KiB"
 #, c-format
 msgid "Listing configs failed (%s)."
 msgstr "Výpis konfigurácií zlyhal (%s)."
+
+#. TRANSLATORS: symbol for "mega" (best keep untranslated)
+msgid "M"
+msgstr ""
+
+#. TRANSLATORS: symbol for "mega bytes" (best keep untranslated)
+#, fuzzy
+msgid "MB"
+msgstr "MiB"
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
 msgstr "Možno, že ste zabudli oddeľovač '..' medzi číslami snímok."
@@ -547,6 +610,15 @@ msgstr "Voľba --from podporovaná iba pre snímky typu single."
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr "Voľba --read-write podporovaná iba pre snímky typu single."
 
+#. TRANSLATORS: symbol for "peta" (best keep untranslated)
+msgid "P"
+msgstr ""
+
+#. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
+#, fuzzy
+msgid "PB"
+msgstr "PiB"
+
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
 msgstr "PiB"
@@ -569,6 +641,15 @@ msgstr "Snímka '%u' nebola nájdená."
 
 msgid "Snapshot is in use."
 msgstr "Snímka sa používa."
+
+#. TRANSLATORS: symbol for "tera" (best keep untranslated)
+msgid "T"
+msgstr ""
+
+#. TRANSLATORS: symbol for "tera bytes" (best keep untranslated)
+#, fuzzy
+msgid "TB"
+msgstr "TiB"
 
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr "Oblasť je možné zadať manuálne pomocou voľby --ambit."
@@ -650,6 +731,15 @@ msgstr "zlyhalo vymazanie %s"
 #, c-format
 msgid "failed to modify %s"
 msgstr "zlyhala úprava %s"
+
+#. TRANSLATORS: symbol for "kilo" (best keep untranslated)
+msgid "k"
+msgstr ""
+
+#. TRANSLATORS: symbol for "kilo bytes" (best keep untranslated)
+#, fuzzy
+msgid "kB"
+msgstr "B"
 
 #, c-format
 msgid "modifying %s"
