--- a/po/ca.po
+++ b/po/ca.po
@@ -2,11 +2,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-03 17:51+0200\n"
+"POT-Creation-Date: 2020-09-23 10:33+0200\n"
 "PO-Revision-Date: 2020-09-16 09:48+0000\n"
 "Last-Translator: David Medina <medipas@gmail.com>\n"
-"Language-Team: Catalan <https://l10n.opensuse.org/projects/snapper/master/ca/"
-">\n"
+"Language-Team: Catalan <https://l10n.opensuse.org/projects/snapper/master/ca/>\n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -44,6 +43,9 @@ msgstr "\t--diff-cmd <command>\t\tOrdre per comparar fitxers."
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr "\t--extensions, -x <options>\tOpcions extres passades a l'ordre diff."
 
+msgid "\t--free-space <space>\t\tTry to make space available."
+msgstr ""
+
 msgid "\t--from\t\t\t\tCreate a snapshot from the specified snapshot."
 msgstr "\t--from\t\t\t\tCrea una instantània a partir d'una instantània específica."
 
@@ -70,6 +72,9 @@ msgstr "\t--no-dbus\t\t\tOpera sense DBus."
 
 msgid "\t--output, -o <file>\t\tSave status to file."
 msgstr "\t--output, -o <file>\t\tDesa l'estat en un fitxer."
+
+msgid "\t--path <path>\t\t\tCleanup all configs affecting path."
+msgstr ""
 
 msgid "\t--pre-number <number>\t\tNumber of corresponding pre snapshot."
 msgstr "\t--pre-number <number>\t\tNúmero de la preinstantània corresponent."
@@ -169,6 +174,10 @@ msgstr "\tsnapper xadiff <número1>..<número2> [fitxers]"
 
 msgid "    Global options:"
 msgstr "    Opcions globals:"
+
+#, fuzzy
+msgid "    Options for 'cleanup' command:"
+msgstr "    Opcions de l'ordre create:"
 
 msgid "    Options for 'create' command:"
 msgstr "    Opcions de l'ordre create:"
@@ -367,6 +376,13 @@ msgid "Configdata '%s' has empty key."
 msgstr "Les dades de configuració %s tenen una clau buida."
 
 #, c-format
+msgid "Could not make enough free space available for path '%s'."
+msgstr ""
+
+msgid "Could not make enough free space available."
+msgstr ""
+
+#, c-format
 msgid "Creating config failed (%s)."
 msgstr "Ha fallat la creació de config (%s)."
 
@@ -402,6 +418,15 @@ msgstr[1] "Suprimint les instantànies de %s:"
 msgid "Detecting filesystem type failed."
 msgstr "Ha fallat la detecció del tipus de sistema de fitxers."
 
+#. TRANSLATORS: symbol for "exa" (best keep untranslated)
+msgid "E"
+msgstr ""
+
+#. TRANSLATORS: symbol for "exa bytes" (best keep untranslated)
+#, fuzzy
+msgid "EB"
+msgstr "EiB"
+
 #. TRANSLATORS: symbol for "exbi bytes" (best keep untranslated)
 msgid "EiB"
 msgstr "EiB"
@@ -418,6 +443,18 @@ msgstr "Error (%s)."
 
 msgid "Failed to initialize filesystem handler."
 msgstr "Ha fallat l'inici del manejador de sistemes de fitxers."
+
+#, fuzzy, c-format
+msgid "Failed to parse '%s'."
+msgstr "Ha fallat la creació de %s"
+
+#, c-format
+msgid "Failed to query free space for path '%s'."
+msgstr ""
+
+#, fuzzy
+msgid "Failed to query free space."
+msgstr "Ha fallat la creació de %s"
 
 msgid "Failed to set locale. Fix your system."
 msgstr "Ha fallat establir la llengua. Corregiu el sistema."
@@ -436,6 +473,15 @@ msgstr "No s'ha trobat el fitxer %s."
 #, c-format
 msgid "Free space error (%s)."
 msgstr "Error d'espai lliure (%s)."
+
+#. TRANSLATORS: symbol for "giga" (best keep untranslated)
+msgid "G"
+msgstr ""
+
+#. TRANSLATORS: symbol for "giga bytes" (best keep untranslated)
+#, fuzzy
+msgid "GB"
+msgstr "GiB"
 
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
@@ -462,12 +508,20 @@ msgstr "Àmbit no vàlid: %s."
 msgid "Invalid configdata."
 msgstr "Dades de configuració no vàlides."
 
+#, fuzzy
+msgid "Invalid free-space value."
+msgstr "Subvolum no vàlid."
+
 msgid "Invalid group."
 msgstr "Grup no vàlid."
 
 #, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "Format llegible per a la màquina no vàlid: %s."
+
+#, fuzzy, c-format
+msgid "Invalid path '%s'."
+msgstr "Àmbit no vàlid: %s."
 
 #, c-format
 msgid "Invalid snapshot '%s'."
@@ -496,6 +550,15 @@ msgstr "KiB"
 #, c-format
 msgid "Listing configs failed (%s)."
 msgstr "Ha fallat la llista de configs (%s)."
+
+#. TRANSLATORS: symbol for "mega" (best keep untranslated)
+msgid "M"
+msgstr ""
+
+#. TRANSLATORS: symbol for "mega bytes" (best keep untranslated)
+#, fuzzy
+msgid "MB"
+msgstr "MiB"
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
 msgstr "Potser heu oblidat el delimitador \"..\" entre els números d'instantània."
@@ -537,6 +600,15 @@ msgstr "L'opció --from només s'admet per a les instantànies de tipus simple."
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr "L'opció --read-write només s'admet per a les instantànies de tipus simple."
 
+#. TRANSLATORS: symbol for "peta" (best keep untranslated)
+msgid "P"
+msgstr ""
+
+#. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
+#, fuzzy
+msgid "PB"
+msgstr "PiB"
+
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
 msgstr "PiB"
@@ -558,6 +630,15 @@ msgstr "No s'ha trobat la instantània %u."
 
 msgid "Snapshot is in use."
 msgstr "La instantània s'usa."
+
+#. TRANSLATORS: symbol for "tera" (best keep untranslated)
+msgid "T"
+msgstr ""
+
+#. TRANSLATORS: symbol for "tera bytes" (best keep untranslated)
+#, fuzzy
+msgid "TB"
+msgstr "TiB"
 
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr "L'àmbit es pot especificar manualment usant l'opció --ambit."
@@ -639,6 +720,15 @@ msgstr "ha fallat suprimir %s"
 #, c-format
 msgid "failed to modify %s"
 msgstr "Ha fallat la modificació de %s"
+
+#. TRANSLATORS: symbol for "kilo" (best keep untranslated)
+msgid "k"
+msgstr ""
+
+#. TRANSLATORS: symbol for "kilo bytes" (best keep untranslated)
+#, fuzzy
+msgid "kB"
+msgstr "B"
 
 #, c-format
 msgid "modifying %s"
