--- a/po/es.po
+++ b/po/es.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: snapper\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-03 17:51+0200\n"
+"POT-Creation-Date: 2020-09-23 10:33+0200\n"
 "PO-Revision-Date: 2020-02-20 00:54+0000\n"
 "Last-Translator: Juan Sarria <juansarriam@gmail.com>\n"
 "Language-Team: Spanish <https://l10n.opensuse.org/projects/snapper/master/es/>\n"
@@ -46,6 +46,9 @@ msgstr "\t--diff-cmd <comando>\t\tEl comando usado para comparar archivos."
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr "\t--extensions, -x <opciones>\tOpciones adicionales que se pasan al comando diff."
 
+msgid "\t--free-space <space>\t\tTry to make space available."
+msgstr ""
+
 msgid "\t--from\t\t\t\tCreate a snapshot from the specified snapshot."
 msgstr "\t--from\t\t\t\tCrea una instantánea a partir de la instantánea especificada."
 
@@ -73,6 +76,9 @@ msgstr "\t--no-dbus\t\t\tTrabajar sin DBus."
 
 msgid "\t--output, -o <file>\t\tSave status to file."
 msgstr "\t--output, -o <file>\t\tGuardar estado a archivo."
+
+msgid "\t--path <path>\t\t\tCleanup all configs affecting path."
+msgstr ""
 
 msgid "\t--pre-number <number>\t\tNumber of corresponding pre snapshot."
 msgstr "\t--pre-number <number>\t\tNúmero de pre imagen correspondiente."
@@ -176,6 +182,10 @@ msgstr "\tsnapper xadiff <número1>..<número2> [archivos]"
 
 msgid "    Global options:"
 msgstr "    Opciones Globales:"
+
+#, fuzzy
+msgid "    Options for 'cleanup' command:"
+msgstr "    Opciones para el comando 'create':"
 
 msgid "    Options for 'create' command:"
 msgstr "    Opciones para el comando 'create':"
@@ -381,6 +391,13 @@ msgid "Configdata '%s' has empty key."
 msgstr "Los datos de configuración %s tienen una clave vacía."
 
 #, c-format
+msgid "Could not make enough free space available for path '%s'."
+msgstr ""
+
+msgid "Could not make enough free space available."
+msgstr ""
+
+#, c-format
 msgid "Creating config failed (%s)."
 msgstr "Fallo al crear la configuración (%s)."
 
@@ -420,6 +437,15 @@ msgstr[1] "Suprimiendo instantáneas de %s:"
 msgid "Detecting filesystem type failed."
 msgstr "Falló la detección del sistema de ficheros."
 
+#. TRANSLATORS: symbol for "exa" (best keep untranslated)
+msgid "E"
+msgstr ""
+
+#. TRANSLATORS: symbol for "exa bytes" (best keep untranslated)
+#, fuzzy
+msgid "EB"
+msgstr "EiB"
+
 #. TRANSLATORS: symbol for "exbi bytes" (best keep untranslated)
 msgid "EiB"
 msgstr "EiB"
@@ -440,6 +466,26 @@ msgstr "Error (%s)."
 msgid "Failed to initialize filesystem handler."
 msgstr "Error al inicializar el gestor del sistema de archivos."
 
+# clients/lan_nfs_write.ycp:78
+# clients/lan_nfs_write.ycp:78
+# include/nfs/nfs_write.ycp:54
+# modules/Nfs.ycp:163
+#, fuzzy, c-format
+msgid "Failed to parse '%s'."
+msgstr "fallo al crear %s"
+
+#, c-format
+msgid "Failed to query free space for path '%s'."
+msgstr ""
+
+# clients/lan_nfs_write.ycp:78
+# clients/lan_nfs_write.ycp:78
+# include/nfs/nfs_write.ycp:54
+# modules/Nfs.ycp:163
+#, fuzzy
+msgid "Failed to query free space."
+msgstr "fallo al crear %s"
+
 msgid "Failed to set locale. Fix your system."
 msgstr "Error al establecer la configuración regional. Repare su sistema."
 
@@ -458,6 +504,15 @@ msgstr "No se ha encontrado el archivo '%s'."
 #, c-format
 msgid "Free space error (%s)."
 msgstr "Error de espacio libre (%s)."
+
+#. TRANSLATORS: symbol for "giga" (best keep untranslated)
+msgid "G"
+msgstr ""
+
+#. TRANSLATORS: symbol for "giga bytes" (best keep untranslated)
+#, fuzzy
+msgid "GB"
+msgstr "GiB"
 
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
@@ -484,6 +539,10 @@ msgstr "Imagen '%s' no válida."
 msgid "Invalid configdata."
 msgstr "Información de configuración no válida."
 
+#, fuzzy
+msgid "Invalid free-space value."
+msgstr "Subvolumen inválido."
+
 # SLE12
 msgid "Invalid group."
 msgstr "Grupo no válido."
@@ -491,6 +550,10 @@ msgstr "Grupo no válido."
 #, fuzzy, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "Estilo de tabla no válido %d."
+
+#, fuzzy, c-format
+msgid "Invalid path '%s'."
+msgstr "Imagen '%s' no válida."
 
 #, c-format
 msgid "Invalid snapshot '%s'."
@@ -520,6 +583,15 @@ msgstr "KiB"
 #, c-format
 msgid "Listing configs failed (%s)."
 msgstr "Falló el listado de configuraciones (%s)."
+
+#. TRANSLATORS: symbol for "mega" (best keep untranslated)
+msgid "M"
+msgstr ""
+
+#. TRANSLATORS: symbol for "mega bytes" (best keep untranslated)
+#, fuzzy
+msgid "MB"
+msgstr "MiB"
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
 msgstr "Puede que haya olvidado indica el delimitador '..' entre los números de las instantáneas."
@@ -562,6 +634,15 @@ msgstr "La opción --from solo se admite para instantáneas de tipo single."
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr "La opción --read-write solo se admite para instantáneas de tipo single."
 
+#. TRANSLATORS: symbol for "peta" (best keep untranslated)
+msgid "P"
+msgstr ""
+
+#. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
+#, fuzzy
+msgid "PB"
+msgstr "PiB"
+
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
 msgstr "PiB"
@@ -585,6 +666,15 @@ msgstr "Imagen '%u' no encontrada."
 # supongo que snapshot es el nombre de un soft, por lo que lo dejo sin traducir.
 msgid "Snapshot is in use."
 msgstr "Snapshot está en uso."
+
+#. TRANSLATORS: symbol for "tera" (best keep untranslated)
+msgid "T"
+msgstr ""
+
+#. TRANSLATORS: symbol for "tera bytes" (best keep untranslated)
+#, fuzzy
+msgid "TB"
+msgstr "TiB"
 
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr ""
@@ -673,6 +763,15 @@ msgstr "fallo al borrar %s"
 #, c-format
 msgid "failed to modify %s"
 msgstr "fallo al modificar %s"
+
+#. TRANSLATORS: symbol for "kilo" (best keep untranslated)
+msgid "k"
+msgstr ""
+
+#. TRANSLATORS: symbol for "kilo bytes" (best keep untranslated)
+#, fuzzy
+msgid "kB"
+msgstr "B"
 
 #, c-format
 msgid "modifying %s"
