--- a/po/eu.po
+++ b/po/eu.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: YaST (@memory@)\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-03 17:51+0200\n"
+"POT-Creation-Date: 2020-09-23 10:33+0200\n"
 "PO-Revision-Date: 2003-02-12 10:23+0100\n"
 "Last-Translator: i18n@suse.de\n"
 "Language-Team: Basque <i18n@suse.de>\n"
@@ -45,6 +45,9 @@ msgstr ""
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr ""
 
+msgid "\t--free-space <space>\t\tTry to make space available."
+msgstr ""
+
 msgid "\t--from\t\t\t\tCreate a snapshot from the specified snapshot."
 msgstr ""
 
@@ -70,6 +73,9 @@ msgid "\t--no-dbus\t\t\tOperate without DBus."
 msgstr ""
 
 msgid "\t--output, -o <file>\t\tSave status to file."
+msgstr ""
+
+msgid "\t--path <path>\t\t\tCleanup all configs affecting path."
 msgstr ""
 
 msgid "\t--pre-number <number>\t\tNumber of corresponding pre snapshot."
@@ -169,6 +175,9 @@ msgid "\tsnapper xadiff <number1>..<number2> [files]"
 msgstr ""
 
 msgid "    Global options:"
+msgstr ""
+
+msgid "    Options for 'cleanup' command:"
 msgstr ""
 
 msgid "    Options for 'create' command:"
@@ -368,6 +377,13 @@ msgid "Configdata '%s' has empty key."
 msgstr ""
 
 #, c-format
+msgid "Could not make enough free space available for path '%s'."
+msgstr ""
+
+msgid "Could not make enough free space available."
+msgstr ""
+
+#, c-format
 msgid "Creating config failed (%s)."
 msgstr ""
 
@@ -403,6 +419,14 @@ msgstr[1] ""
 msgid "Detecting filesystem type failed."
 msgstr ""
 
+#. TRANSLATORS: symbol for "exa" (best keep untranslated)
+msgid "E"
+msgstr ""
+
+#. TRANSLATORS: symbol for "exa bytes" (best keep untranslated)
+msgid "EB"
+msgstr ""
+
 #. TRANSLATORS: symbol for "exbi bytes" (best keep untranslated)
 msgid "EiB"
 msgstr ""
@@ -418,6 +442,17 @@ msgid "Error (%s)."
 msgstr ""
 
 msgid "Failed to initialize filesystem handler."
+msgstr ""
+
+#, c-format
+msgid "Failed to parse '%s'."
+msgstr ""
+
+#, c-format
+msgid "Failed to query free space for path '%s'."
+msgstr ""
+
+msgid "Failed to query free space."
 msgstr ""
 
 msgid "Failed to set locale. Fix your system."
@@ -436,6 +471,14 @@ msgstr ""
 
 #, c-format
 msgid "Free space error (%s)."
+msgstr ""
+
+#. TRANSLATORS: symbol for "giga" (best keep untranslated)
+msgid "G"
+msgstr ""
+
+#. TRANSLATORS: symbol for "giga bytes" (best keep untranslated)
+msgid "GB"
 msgstr ""
 
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
@@ -463,11 +506,18 @@ msgstr ""
 msgid "Invalid configdata."
 msgstr ""
 
+msgid "Invalid free-space value."
+msgstr ""
+
 msgid "Invalid group."
 msgstr ""
 
 #, c-format
 msgid "Invalid machine readable format '%s'."
+msgstr ""
+
+#, c-format
+msgid "Invalid path '%s'."
 msgstr ""
 
 #, c-format
@@ -496,6 +546,14 @@ msgstr ""
 
 #, c-format
 msgid "Listing configs failed (%s)."
+msgstr ""
+
+#. TRANSLATORS: symbol for "mega" (best keep untranslated)
+msgid "M"
+msgstr ""
+
+#. TRANSLATORS: symbol for "mega bytes" (best keep untranslated)
+msgid "MB"
 msgstr ""
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
@@ -538,6 +596,14 @@ msgstr ""
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr ""
 
+#. TRANSLATORS: symbol for "peta" (best keep untranslated)
+msgid "P"
+msgstr ""
+
+#. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
+msgid "PB"
+msgstr ""
+
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
 msgstr ""
@@ -558,6 +624,14 @@ msgid "Snapshot '%u' not found."
 msgstr ""
 
 msgid "Snapshot is in use."
+msgstr ""
+
+#. TRANSLATORS: symbol for "tera" (best keep untranslated)
+msgid "T"
+msgstr ""
+
+#. TRANSLATORS: symbol for "tera bytes" (best keep untranslated)
+msgid "TB"
 msgstr ""
 
 msgid "The ambit can be specified manually using the --ambit option."
@@ -639,6 +713,14 @@ msgstr ""
 
 #, c-format
 msgid "failed to modify %s"
+msgstr ""
+
+#. TRANSLATORS: symbol for "kilo" (best keep untranslated)
+msgid "k"
+msgstr ""
+
+#. TRANSLATORS: symbol for "kilo bytes" (best keep untranslated)
+msgid "kB"
 msgstr ""
 
 #, c-format
