--- a/po/pt.po
+++ b/po/pt.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-03 17:51+0200\n"
+"POT-Creation-Date: 2020-09-23 10:33+0200\n"
 "PO-Revision-Date: 2018-06-01 11:05+0000\n"
 "Last-Translator: Jiri Machalek <jiri.machalek@tieto.com>\n"
 "Language-Team: Portuguese <https://l10n.opensuse.org/projects/snapper/master/pt/>\n"
@@ -49,6 +49,9 @@ msgstr ""
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr ""
 
+msgid "\t--free-space <space>\t\tTry to make space available."
+msgstr ""
+
 msgid "\t--from\t\t\t\tCreate a snapshot from the specified snapshot."
 msgstr ""
 
@@ -74,6 +77,9 @@ msgid "\t--no-dbus\t\t\tOperate without DBus."
 msgstr ""
 
 msgid "\t--output, -o <file>\t\tSave status to file."
+msgstr ""
+
+msgid "\t--path <path>\t\t\tCleanup all configs affecting path."
 msgstr ""
 
 msgid "\t--pre-number <number>\t\tNumber of corresponding pre snapshot."
@@ -176,6 +182,9 @@ msgstr ""
 #, fuzzy
 msgid "    Global options:"
 msgstr "Opções do Módulo Global:\n"
+
+msgid "    Options for 'cleanup' command:"
+msgstr ""
 
 msgid "    Options for 'create' command:"
 msgstr ""
@@ -402,6 +411,13 @@ msgstr ""
 msgid "Configdata '%s' has empty key."
 msgstr ""
 
+#, c-format
+msgid "Could not make enough free space available for path '%s'."
+msgstr ""
+
+msgid "Could not make enough free space available."
+msgstr ""
+
 #, fuzzy, c-format
 msgid "Creating config failed (%s)."
 msgstr "Falha na leitura do ficheiro de configuração"
@@ -440,6 +456,14 @@ msgstr[1] "Falha ao apagar o CA: %1"
 msgid "Detecting filesystem type failed."
 msgstr ""
 
+#. TRANSLATORS: symbol for "exa" (best keep untranslated)
+msgid "E"
+msgstr ""
+
+#. TRANSLATORS: symbol for "exa bytes" (best keep untranslated)
+msgid "EB"
+msgstr ""
+
 #. TRANSLATORS: symbol for "exbi bytes" (best keep untranslated)
 msgid "EiB"
 msgstr ""
@@ -457,6 +481,18 @@ msgstr "Erro de I/O"
 
 msgid "Failed to initialize filesystem handler."
 msgstr ""
+
+#, fuzzy, c-format
+msgid "Failed to parse '%s'."
+msgstr "Falha na criação de um processo"
+
+#, c-format
+msgid "Failed to query free space for path '%s'."
+msgstr ""
+
+#, fuzzy
+msgid "Failed to query free space."
+msgstr "Falha na criação de um processo"
 
 msgid "Failed to set locale. Fix your system."
 msgstr ""
@@ -477,6 +513,14 @@ msgstr "'%s' não encontrado."
 #, fuzzy, c-format
 msgid "Free space error (%s)."
 msgstr "Erro de I/O"
+
+#. TRANSLATORS: symbol for "giga" (best keep untranslated)
+msgid "G"
+msgstr ""
+
+#. TRANSLATORS: symbol for "giga bytes" (best keep untranslated)
+msgid "GB"
+msgstr ""
 
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
@@ -507,11 +551,18 @@ msgstr "Estilo de tabela inválido %d."
 msgid "Invalid configdata."
 msgstr "Dados de emissão inválidos."
 
+msgid "Invalid free-space value."
+msgstr ""
+
 msgid "Invalid group."
 msgstr ""
 
 #, fuzzy, c-format
 msgid "Invalid machine readable format '%s'."
+msgstr "Estilo de tabela inválido %d."
+
+#, fuzzy, c-format
+msgid "Invalid path '%s'."
 msgstr "Estilo de tabela inválido %d."
 
 #, fuzzy, c-format
@@ -542,6 +593,14 @@ msgstr ""
 #, fuzzy, c-format
 msgid "Listing configs failed (%s)."
 msgstr "A interpretar os ficheiros de configuração..."
+
+#. TRANSLATORS: symbol for "mega" (best keep untranslated)
+msgid "M"
+msgstr ""
+
+#. TRANSLATORS: symbol for "mega bytes" (best keep untranslated)
+msgid "MB"
+msgstr ""
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
 msgstr ""
@@ -586,6 +645,14 @@ msgstr ""
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr ""
 
+#. TRANSLATORS: symbol for "peta" (best keep untranslated)
+msgid "P"
+msgstr ""
+
+#. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
+msgid "PB"
+msgstr ""
+
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
 msgstr ""
@@ -608,6 +675,14 @@ msgid "Snapshot '%u' not found."
 msgstr "%s '%s' não encontrado."
 
 msgid "Snapshot is in use."
+msgstr ""
+
+#. TRANSLATORS: symbol for "tera" (best keep untranslated)
+msgid "T"
+msgstr ""
+
+#. TRANSLATORS: symbol for "tera bytes" (best keep untranslated)
+msgid "TB"
 msgstr ""
 
 msgid "The ambit can be specified manually using the --ambit option."
@@ -692,6 +767,14 @@ msgstr "Falha ao apagar chave."
 #, fuzzy, c-format
 msgid "failed to modify %s"
 msgstr "Falha ao desmontar %s"
+
+#. TRANSLATORS: symbol for "kilo" (best keep untranslated)
+msgid "k"
+msgstr ""
+
+#. TRANSLATORS: symbol for "kilo bytes" (best keep untranslated)
+msgid "kB"
+msgstr ""
 
 #, fuzzy, c-format
 msgid "modifying %s"
