--- a/po/tr.po
+++ b/po/tr.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-03 17:51+0200\n"
+"POT-Creation-Date: 2020-09-23 10:33+0200\n"
 "PO-Revision-Date: 2019-03-01 20:28+0000\n"
 "Last-Translator: Murat Servan Kahraman <muratservan@outlook.com>\n"
 "Language-Team: Turkish <https://l10n.opensuse.org/projects/snapper/master/tr/>\n"
@@ -49,6 +49,9 @@ msgstr ""
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr ""
 
+msgid "\t--free-space <space>\t\tTry to make space available."
+msgstr ""
+
 msgid "\t--from\t\t\t\tCreate a snapshot from the specified snapshot."
 msgstr ""
 
@@ -77,6 +80,9 @@ msgstr ""
 
 msgid "\t--output, -o <file>\t\tSave status to file."
 msgstr "\t--output, -o <file>\t\tDurumu dosyaya kaydet."
+
+msgid "\t--path <path>\t\t\tCleanup all configs affecting path."
+msgstr ""
 
 #, fuzzy
 msgid "\t--pre-number <number>\t\tNumber of corresponding pre snapshot."
@@ -194,6 +200,10 @@ msgstr "\tyakalayıcı fark <number1>..<number2> [dosyalar]"
 
 msgid "    Global options:"
 msgstr "    Evrensel seçenekler:"
+
+#, fuzzy
+msgid "    Options for 'cleanup' command:"
+msgstr "    'create' komutu için seçenekler:"
 
 msgid "    Options for 'create' command:"
 msgstr "    'create' komutu için seçenekler:"
@@ -428,6 +438,13 @@ msgid "Configdata '%s' has empty key."
 msgstr ""
 
 #, c-format
+msgid "Could not make enough free space available for path '%s'."
+msgstr ""
+
+msgid "Could not make enough free space available."
+msgstr ""
+
+#, c-format
 msgid "Creating config failed (%s)."
 msgstr "Yapılandırma oluşturma başarısız oldu (%s)."
 
@@ -464,6 +481,14 @@ msgstr[0] "Yapılandırma oluşturma başarısız oldu (%s)."
 msgid "Detecting filesystem type failed."
 msgstr "Dosya sistemi türünü tespit etme başarısız oldu."
 
+#. TRANSLATORS: symbol for "exa" (best keep untranslated)
+msgid "E"
+msgstr ""
+
+#. TRANSLATORS: symbol for "exa bytes" (best keep untranslated)
+msgid "EB"
+msgstr ""
+
 #. TRANSLATORS: symbol for "exbi bytes" (best keep untranslated)
 msgid "EiB"
 msgstr ""
@@ -481,6 +506,18 @@ msgstr "Giriş/Çıkış hatası"
 
 msgid "Failed to initialize filesystem handler."
 msgstr ""
+
+#, fuzzy, c-format
+msgid "Failed to parse '%s'."
+msgstr "%s oluşturma başarısız oldu"
+
+#, c-format
+msgid "Failed to query free space for path '%s'."
+msgstr ""
+
+#, fuzzy
+msgid "Failed to query free space."
+msgstr "%s oluşturma başarısız oldu"
 
 msgid "Failed to set locale. Fix your system."
 msgstr ""
@@ -500,6 +537,14 @@ msgstr "'%s' dosyası bulunamadı."
 #, fuzzy, c-format
 msgid "Free space error (%s)."
 msgstr "Giriş/Çıkış hatası"
+
+#. TRANSLATORS: symbol for "giga" (best keep untranslated)
+msgid "G"
+msgstr ""
+
+#. TRANSLATORS: symbol for "giga bytes" (best keep untranslated)
+msgid "GB"
+msgstr ""
 
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
@@ -531,12 +576,20 @@ msgstr "Geçersiz '%s' anlık görüntüsü."
 msgid "Invalid configdata."
 msgstr "Geçersiz kullanıcı verisi."
 
+#, fuzzy
+msgid "Invalid free-space value."
+msgstr "Geçersiz arkases."
+
 msgid "Invalid group."
 msgstr ""
 
 #, fuzzy, c-format
 msgid "Invalid machine readable format '%s'."
 msgstr "%d geçersiz tablo stili."
+
+#, fuzzy, c-format
+msgid "Invalid path '%s'."
+msgstr "Geçersiz '%s' anlık görüntüsü."
 
 #, c-format
 msgid "Invalid snapshot '%s'."
@@ -566,6 +619,14 @@ msgstr ""
 #, c-format
 msgid "Listing configs failed (%s)."
 msgstr "Yapılandırmaları listeleme başarısız oldu (%s)."
+
+#. TRANSLATORS: symbol for "mega" (best keep untranslated)
+msgid "M"
+msgstr ""
+
+#. TRANSLATORS: symbol for "mega bytes" (best keep untranslated)
+msgid "MB"
+msgstr ""
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
 msgstr ""
@@ -610,6 +671,14 @@ msgstr ""
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr ""
 
+#. TRANSLATORS: symbol for "peta" (best keep untranslated)
+msgid "P"
+msgstr ""
+
+#. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
+msgid "PB"
+msgstr ""
+
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
 msgstr ""
@@ -632,6 +701,14 @@ msgid "Snapshot '%u' not found."
 msgstr "'%u' anlık görüntüsü bulunamadı."
 
 msgid "Snapshot is in use."
+msgstr ""
+
+#. TRANSLATORS: symbol for "tera" (best keep untranslated)
+msgid "T"
+msgstr ""
+
+#. TRANSLATORS: symbol for "tera bytes" (best keep untranslated)
+msgid "TB"
 msgstr ""
 
 msgid "The ambit can be specified manually using the --ambit option."
@@ -716,6 +793,14 @@ msgstr "%s 'i silme başarısız oldu"
 #, fuzzy, c-format
 msgid "failed to modify %s"
 msgstr "%s 'i değiştirme başarısız oldu"
+
+#. TRANSLATORS: symbol for "kilo" (best keep untranslated)
+msgid "k"
+msgstr ""
+
+#. TRANSLATORS: symbol for "kilo bytes" (best keep untranslated)
+msgid "kB"
+msgstr ""
 
 #, c-format
 msgid "modifying %s"
