--- a/po/zu.po
+++ b/po/zu.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: installation\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-03 17:51+0200\n"
+"POT-Creation-Date: 2020-09-23 10:33+0200\n"
 "PO-Revision-Date: 2016-04-19 09:51+0000\n"
 "Last-Translator: Shane Wims <shane.wims@microfocus.com>\n"
 "Language-Team: Zulu <http://l10n.opensuse.org/projects/snapper/master/zu/>\n"
@@ -46,6 +46,9 @@ msgstr ""
 msgid "\t--extensions, -x <options>\tExtra options passed to the diff command."
 msgstr ""
 
+msgid "\t--free-space <space>\t\tTry to make space available."
+msgstr ""
+
 msgid "\t--from\t\t\t\tCreate a snapshot from the specified snapshot."
 msgstr ""
 
@@ -71,6 +74,9 @@ msgid "\t--no-dbus\t\t\tOperate without DBus."
 msgstr ""
 
 msgid "\t--output, -o <file>\t\tSave status to file."
+msgstr ""
+
+msgid "\t--path <path>\t\t\tCleanup all configs affecting path."
 msgstr ""
 
 msgid "\t--pre-number <number>\t\tNumber of corresponding pre snapshot."
@@ -172,6 +178,9 @@ msgstr ""
 #, fuzzy
 msgid "    Global options:"
 msgstr "Okukhethwa kukho kwembulunga yonke okungaziwa"
+
+msgid "    Options for 'cleanup' command:"
+msgstr ""
 
 msgid "    Options for 'create' command:"
 msgstr ""
@@ -392,6 +401,13 @@ msgstr ""
 msgid "Configdata '%s' has empty key."
 msgstr ""
 
+#, c-format
+msgid "Could not make enough free space available for path '%s'."
+msgstr ""
+
+msgid "Could not make enough free space available."
+msgstr ""
+
 #, fuzzy, c-format
 msgid "Creating config failed (%s)."
 msgstr "Inqunta amafayela okuhlela..."
@@ -431,6 +447,14 @@ msgstr[1] "Ukususa i-CA kuhlulekile: %1."
 msgid "Detecting filesystem type failed."
 msgstr ""
 
+#. TRANSLATORS: symbol for "exa" (best keep untranslated)
+msgid "E"
+msgstr ""
+
+#. TRANSLATORS: symbol for "exa bytes" (best keep untranslated)
+msgid "EB"
+msgstr ""
+
 #. TRANSLATORS: symbol for "exbi bytes" (best keep untranslated)
 msgid "EiB"
 msgstr ""
@@ -451,6 +475,18 @@ msgstr "Iphutha le-I/O"
 msgid "Failed to initialize filesystem handler."
 msgstr ""
 
+#, fuzzy, c-format
+msgid "Failed to parse '%s'."
+msgstr "Failed to parse: %s."
+
+#, c-format
+msgid "Failed to query free space for path '%s'."
+msgstr ""
+
+#, fuzzy
+msgid "Failed to query free space."
+msgstr "Failed to parse: %s."
+
 msgid "Failed to set locale. Fix your system."
 msgstr ""
 
@@ -470,6 +506,14 @@ msgstr "Ifayela %1 ayitholakali enqolobaneni yamafayela."
 #, fuzzy, c-format
 msgid "Free space error (%s)."
 msgstr "Iphutha le-I/O"
+
+#. TRANSLATORS: symbol for "giga" (best keep untranslated)
+msgid "G"
+msgstr ""
+
+#. TRANSLATORS: symbol for "giga bytes" (best keep untranslated)
+msgid "GB"
+msgstr ""
 
 #. TRANSLATORS: symbol for "gibi bytes" (best keep untranslated)
 msgid "GiB"
@@ -500,12 +544,19 @@ msgstr "Akunanjongo %1."
 msgid "Invalid configdata."
 msgstr "Ukwaziswa okukhishiwe okungekho emthethweni."
 
+msgid "Invalid free-space value."
+msgstr ""
+
 #, fuzzy
 msgid "Invalid group."
 msgstr "Isizathu se-CRL esingezwakali."
 
 #, fuzzy, c-format
 msgid "Invalid machine readable format '%s'."
+msgstr "Akunanjongo %1."
+
+#, fuzzy, c-format
+msgid "Invalid path '%s'."
 msgstr "Akunanjongo %1."
 
 #, fuzzy, c-format
@@ -537,6 +588,14 @@ msgstr ""
 #, fuzzy, c-format
 msgid "Listing configs failed (%s)."
 msgstr "Inqunta amafayela okuhlela..."
+
+#. TRANSLATORS: symbol for "mega" (best keep untranslated)
+msgid "M"
+msgstr ""
+
+#. TRANSLATORS: symbol for "mega bytes" (best keep untranslated)
+msgid "MB"
+msgstr ""
 
 msgid "Maybe you forgot the delimiter '..' between the snapshot numbers."
 msgstr ""
@@ -581,6 +640,14 @@ msgstr ""
 msgid "Option --read-write only supported for snapshots of type single."
 msgstr ""
 
+#. TRANSLATORS: symbol for "peta" (best keep untranslated)
+msgid "P"
+msgstr ""
+
+#. TRANSLATORS: symbol for "peta bytes" (best keep untranslated)
+msgid "PB"
+msgstr ""
+
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
 msgstr ""
@@ -605,6 +672,14 @@ msgstr "Isiphakeli %s asizange sitholakale."
 #, fuzzy
 msgid "Snapshot is in use."
 msgstr "Isiphakeli %s asizange sitholakale."
+
+#. TRANSLATORS: symbol for "tera" (best keep untranslated)
+msgid "T"
+msgstr ""
+
+#. TRANSLATORS: symbol for "tera bytes" (best keep untranslated)
+msgid "TB"
+msgstr ""
 
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr ""
@@ -688,6 +763,14 @@ msgstr "Failed to parse: %s."
 #, fuzzy, c-format
 msgid "failed to modify %s"
 msgstr "Ihlulekile ukufaka imoduli \"%s\"."
+
+#. TRANSLATORS: symbol for "kilo" (best keep untranslated)
+msgid "k"
+msgstr ""
+
+#. TRANSLATORS: symbol for "kilo bytes" (best keep untranslated)
+msgid "kB"
+msgstr ""
 
 #, c-format
 msgid "modifying %s"
